--- a/services/pom.xml
+++ b/services/pom.xml
@@ -69,6 +69,13 @@
       <artifactId>social-component-core</artifactId>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.exoplatform.calendar</groupId>
+      <artifactId>calendar-service</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    
     <!-- TEST -->
     <dependency>
       <groupId>junit</groupId>
